# vmap-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: verify.yml
src/: as_type.rs  block.rs  buf.rs  buffer.rs  error.rs  io.rs  lib.rs  map.rs  page.rs  ring.rs  slice.rs  span.rs
src/io/: buffer.rs  mod.rs  ring.rs
src/os/: mod.rs  windows.rs
src/os/unix/: mach.rs  mod.rs
src/os/unix/posix/: memfd.rs  mod.rs
src/unix/: macos.rs  mod.rs  posix.rs
src/windows/: mod.rs
