[package]
name = "vmap"
version = "0.2.0"
authors = ["Jeremy Larkin <jeremylarkin@gmail.com>"]
license = "MIT"
repository = "https://github.com/kalamay/vmap-rs"
documentation = "https://docs.rs/vmap"
description = "Cross-platform library for fast and safe memory-mapped IO"
keywords = ["mmap", "io", "file", "circular-buffer", "ring-buffer"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(unix, not(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios"))))'.dependencies]
rand = "0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "sysinfoapi", "handleapi", "memoryapi"] }

[dev-dependencies]
tempdir = "0.3"
