[package]
name = "vmap"
version = "0.5.0"
authors = ["Jeremy Larkin <jeremylarkin@gmail.com>"]
license = "MIT"
repository = "https://github.com/kalamay/vmap-rs"
documentation = "https://docs.rs/vmap"
description = "Cross-platform library for fast and safe memory-mapped IO"
keywords = ["mmap", "io", "file", "circular-buffer", "ring-buffer"]
edition = "2021"

[features]
default = ["all"]
all = ["io", "os"]
io = []
os = []

[dependencies]
system_error = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "basetsd", "minwindef", "sysinfoapi", "handleapi", "memoryapi", "fileapi"] }

[dev-dependencies]
tempdir = "0.3"
